# writing-analysis

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
benches/: analysis_benchmark.rs
data/: afinn-111.txt
data/zh/: common_chars_3000.txt  sentiment_zh.txt
docs/: analysis-spec.md  architecture.md  chinese-support-spec.md  implementation-guide.md  sentiment-lexicon-spec.md  testing-strategy.md  types.md
src/: cliche.rs  error.rs  filter_words.rs  lexicon.rs  lib.rs  passive_voice.rs  readability.rs  sentence_variety.rs  sentiment.rs  utils.rs
src/zh/: cliche.rs  filter_words.rs  lexicon.rs  mod.rs  passive_voice.rs  readability.rs  segmenter.rs  sentence_variety.rs  sentiment.rs  utils.rs
tests/: integration_tests.rs  integration_tests_zh.rs
tests/fixtures/: literary_sample.txt  passive_heavy.txt  simple_text.txt  zh_literary.txt  zh_passive_heavy.txt  zh_simple.txt
